--- a/.gitignore
+++ b/.gitignore
@@ -70,7 +70,10 @@ PB/test-data/file-mapping-test/
 *.puml
 compile_commands.json
 out/
-PB/build*
+PB/x64*
+PB/arm64*
+PB/skia-fat/*
+PB/vcpkg-fat/*
 build-x64*
 build-ARM64*
 windows/PhotobookRuntimeComponent/*_g.h
