build: Update docs, pipelines.

--- a/.github/workflows/objective-c-xcode.yml
+++ b/.github/workflows/objective-c-xcode.yml
@@ -18,7 +18,7 @@ jobs:
         run: brew install pkg-config
       - uses: lukka/get-cmake@latest
       - name: run-vcpkg
-        uses: lukka/run-vcpkg@11
+        uses: lukka/run-vcpkg@v11.5
         with:
           # Specify the full SHA-1 hash of a Git commit (not a branch name, nor a tag!) that establishes which version of vcpkg needs to be used. When using vcpkg as a Git submodule, this input is *not* needed as implicitly specified by the submodule.
           vcpkgGitCommitId: 'b2cb0da531c2f1f740045bfe7c4dac59f0b2b69c'
