--- a/windows/PhotobookRuntimeComponent/PhotobookRuntimeComponent.vcxproj
+++ b/windows/PhotobookRuntimeComponent/PhotobookRuntimeComponent.vcxproj
@@ -156,6 +156,9 @@
     <ClInclude Include="LutIconInfo.h">
       <DependentUpon>LutIconInfo.idl</DependentUpon>
     </ClInclude>
+    <ClInclude Include="NoirListener.h">
+      <DependentUpon>NoirListener.idl</DependentUpon>
+    </ClInclude>
     <ClInclude Include="Int32Pair.h">
       <DependentUpon>Int32Pair.idl</DependentUpon>
     </ClInclude>
@@ -218,6 +221,9 @@
     <ClCompile Include="LutIconInfo.cpp">
       <DependentUpon>LutIconInfo.idl</DependentUpon>
     </ClCompile>
+    <ClCompile Include="NoirListener.cpp">
+      <DependentUpon>NoirListener.idl</DependentUpon>
+    </ClCompile>
     <ClCompile Include="PaperSettings.cpp">
       <DependentUpon>PaperSettings.idl</DependentUpon>
     </ClCompile>
@@ -261,6 +267,7 @@
     <Midl Include="CollageTemplateInfo.idl" />
     <Midl Include="Int32Pair.idl" />
     <Midl Include="LutIconInfo.idl" />
+    <Midl Include="NoirListener.idl" />
     <Midl Include="PhotobookWin.idl" />
     <Midl Include="ProgressInfo.idl" />
     <Midl Include="ProjectItem.idl" />
