--- a/.github/workflows/objective-c-xcode.yml
+++ b/.github/workflows/objective-c-xcode.yml
@@ -14,8 +14,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: install pkg config
+
+      - name: Install autoconf
+        run: brew install autoconf
+
+      - name: Install pkg config
         run: brew install pkg-config
+
       - uses: lukka/get-cmake@latest
       - name: run-vcpkg
         uses: lukka/run-vcpkg@v11.5
