--- a/windows/PhotobookRuntimeComponent/packages.config
+++ b/windows/PhotobookRuntimeComponent/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Graphics.Win2D" version="1.2.0" targetFramework="native" />
+  <package id="Microsoft.Graphics.Win2D" version="1.3.0" targetFramework="native" />
+  <package id="Microsoft.Web.WebView2" version="1.0.2903.40" targetFramework="native" />
   <package id="Microsoft.Windows.CppWinRT" version="2.0.240405.15" targetFramework="native" />
-  <package id="Microsoft.Windows.ImplementationLibrary" version="1.0.240122.1" targetFramework="native" />
-  <package id="Microsoft.Windows.SDK.BuildTools" version="10.0.22621.3233" targetFramework="native" />
-  <package id="Microsoft.WindowsAppSDK" version="1.5.240404000" targetFramework="native" />
+  <package id="Microsoft.Windows.ImplementationLibrary" version="1.0.240803.1" targetFramework="native" />
+  <package id="Microsoft.Windows.SDK.BuildTools" version="10.0.26100.1742" targetFramework="native" />
+  <package id="Microsoft.WindowsAppSDK" version="1.6.241114003" targetFramework="native" />
 </packages>
