--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Install pkg config
         run: brew install pkg-config
 
+      - name: Set environment variable
+        run: echo "VCPKG_DEFAULT_TRIPLET=arm64-ios" >> $GITHUB_ENV
+
       - uses: lukka/get-cmake@latest
       - name: run-vcpkg
         uses: lukka/run-vcpkg@v11.5
@@ -33,7 +36,6 @@ jobs:
           doNotCache: false
           # Specify the glob expression used to discover the vcpkg.json whose content's hash is added to the cache key. On Windows runners using `github.workspace` context to form the expression would not work as expected since it contains backslashes. Use instead `**/path/to/vcpkg.json` to match the desired `vcpkg.json` file.
           vcpkgJsonGlob: '**/windows/vcpkg.json'
-          vcpkgTriplet: 'arm64-ios'
 
       - name: Build Noir Library
         run: ./build-pblib-ios.sh
